Fix table spacing
Add border radius and padding to rows
Remove spacer element.

--- a/client/common/sass/directory/_instance-table.sass
+++ b/client/common/sass/directory/_instance-table.sass
@@ -1,5 +1,18 @@
 .instance-table
 	width: 100%
+	border-collapse: separate
+
+.instance-table__icon
+	border-top-left-radius: $button-border-radius
+	border-bottom-left-radius: $button-border-radius
+	padding: 0.25rem 0
+
+.instance-table__grade-column
+	border-top-right-radius: $button-border-radius
+	border-bottom-right-radius: $button-border-radius
+
+.instance-table__icon, .instance-table__org, .instance-table__grade-column
+	padding: 0.5rem
 
 .instance-table__head
 	margin-bottom: 2rem
@@ -53,9 +66,6 @@
 .instance-table__link
 	+link--unstyled
 	display: inline-block
-
-.instance-table__spacer
-	height: 1rem
 
 .instance-table__hexagon
 	height: 2.5rem
